10. Istio/countries-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: countries-service-ingress
spec:
  hosts: 
  - '*'
  gateways:
  - countries-gateway
  http:
  - match:
    - headers:
        user-agent:
          regex: .*Chrome.*
    route:
    - destination:
        host: countries-service-v1
  - route:
    - destination:
        host: countries-service-v2
